<resources>
    <string name="app_name">ColorMemory</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alreadymatched">Already Matched</string>
    <string name="highscore">High Score</string>
    <string name="congratsnewhighscore">Congratulations.</string>
    <string name="enterdetails">Enter Details</string>
    <string name="entername">enter name</string>
    <string name="save">save</string>
    <string name="highscores">High Scores</string>
    <string name="namecantbeempty">Name cant be empty</string>
    <string name="yourscoreis">Your rank is %d</string>
    <string name="reset">Reset</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="pleasewait">Please Wait</string>
    <string name="currentscore">Current Score</string>
</resources>
