<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data></data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/enterdetails"
            android:textColor="@android:color/black" />


        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:hint="@string/entername"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_score"
            android:layout_centerHorizontal="true"
            android:text="@string/save" />
    </RelativeLayout>
</layout>